flip welcome-image

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="welcome-message__image">
         <picture>
-          <img src="./assets/images/welcome-image.jpg"
+          <img src="./assets/images/welcome-image.png"
             alt="Ilustración de un hombre caminando por un parque en una ciudad">
         </picture>
       </div>
